# simple-pong

./: .gitignore  Pipfile  README.md  pong.py  pong.qml  pyproject.toml
